Add new Python problem notebooks and update basics
Added three new Jupyter notebooks for functions, file handling, and OOPs problems with solutions. Updated the basics notebook with execution output for the temperature conversion problem and added a placeholder for a factorial problem.

--- a/01Python/01Basics Problems with Solutions.ipynb
+++ b/01Python/01Basics Problems with Solutions.ipynb
@@ -179,15 +179,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0dc34423-dde9-40a8-85fa-909701d971b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter temprature in celsius:  23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.0°C = 73.4°F\n"
+     ]
+    }
+   ],
    "source": [
     "c = float(input('Enter temprature in celsius: '))\n",
     "f = (c * 9/5) + 32\n",
     "print(f\"{c}°C = {f}°F\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a25f63fa-9846-421b-b5db-524129ab22c0",
+   "metadata": {},
+   "source": [
+    "7. Factorial using a loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd9fbbb-3656-442d-bbe9-53d1aac63d7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
