--- a/01Python/01Basics Problems with Solutions.ipynb
+++ b/01Python/01Basics Problems with Solutions.ipynb
@@ -1084,12 +1084,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65437005-0f95-47bb-9779-aeda94cb54f6",
+   "cell_type": "markdown",
+   "id": "c7920696-8594-47ef-a88c-d40bb5c1f4d8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "30. Cube of numbers up to N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7c31a41d-ef46-4563-9225-8a8aad2b7d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter N:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1^3 = 1\n",
+      "2^3 = 8\n",
+      "3^3 = 27\n",
+      "4^3 = 64\n",
+      "5^3 = 125\n",
+      "6^3 = 216\n",
+      "7^3 = 343\n",
+      "8^3 = 512\n",
+      "9^3 = 729\n",
+      "10^3 = 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter N: \"))\n",
+    "for i in range(1, n+1):\n",
+    "    print(f\"{i}^3 = {i**3}\")\n"
+   ]
   }
  ],
  "metadata": {
