--- a/01Python/01Basics Problems with Solutions.ipynb
+++ b/01Python/01Basics Problems with Solutions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "b96e516c",
    "metadata": {},
    "outputs": [
@@ -45,19 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f875b14a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43menter your name: \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28minput\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "akshit\n"
      ]
     }
    ],
@@ -76,19 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "644be76c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter number: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is EVEN\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 is EVEN\n"
      ]
     }
    ],
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "a210cc29",
    "metadata": {},
    "outputs": [
@@ -119,16 +111,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 X 1 = 2\n",
-      "2 X 2 = 4\n",
-      "2 X 3 = 6\n",
-      "2 X 4 = 8\n",
-      "2 X 5 = 10\n",
-      "2 X 6 = 12\n",
-      "2 X 7 = 14\n",
-      "2 X 8 = 16\n",
-      "2 X 9 = 18\n",
-      "2 X 10 = 20\n"
+      "20 X 1 = 20\n",
+      "20 X 2 = 40\n",
+      "20 X 3 = 60\n",
+      "20 X 4 = 80\n",
+      "20 X 5 = 100\n",
+      "20 X 6 = 120\n",
+      "20 X 7 = 140\n",
+      "20 X 8 = 160\n",
+      "20 X 9 = 180\n",
+      "20 X 10 = 200\n"
      ]
     }
    ],
@@ -140,9 +132,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "debb328a",
+   "metadata": {},
+   "source": [
+    "***5.Write a program to find the largest of three numbers.***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a0dcc84a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 is largest number of three 65, 24 & 12 \n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input(\"Enter number 1: \"))\n",
+    "num2 = int(input(\"Enter number 2: \"))\n",
+    "num3 = int(input(\"Enter number 3: \"))\n",
+    "\n",
+    "print(f'{max(num1,num2,num3)} is largest number of three {num1}, {num2} & {num3} ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90a41d5b",
+   "metadata": {},
+   "source": [
+    "***6.Convert temperature from Celsius to Fahrenheit.***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7de54289",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fahrenheit: 32.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "Celsius = int(input(\"Celsius: \"))\n",
+    "\n",
+    "Fahrenheit = (Celsius * 9/5) + 32\n",
+    "\n",
+    "print(f\"Fahrenheit: {Fahrenheit}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debb328a",
+   "id": "648134c6",
    "metadata": {},
    "outputs": [],
    "source": []
